   works for both WFN and TTF fonts and may be used as a reference.
 - Made Editor correctly detect modern versions of MS Windows for display on
   About dialog and when sending anonymous statistics.
 - New application icon to comply with 3.4.0 splash screen.
 - Fixed crash when importing old games which have extended editor version
   string saved in the project files.
 - Fixed #ifver and #ifnver not working properly if version number had only one
   component (major version).
 - Few improvements to the game compilation made in hope to reduce occasional
   data corruption.

Script:
 - Fixed local variables not working in the switch's case expressions.
 - Fixed Strings in switch, making them compare by value again.
 - Fixed compiler mistakes caused by the use of objects of empty type
   (that is - struct without any variables in it).
 - Fixed few cases of possible compiler crashing when there is an unfinished
   statement in the end of the script.

Script API:
 - A new parameter StopMovementStyle is added to following functions: LockView,
   LockViewAligned, LockViewFrame, LockViewOffset, UnlockView. This parameter
   can be eStopMoving (default) or eKeepMoving.
 - Added missing readonly properties to get Lighting/Tinting parameters for
   Character and Object: HasExplicitLight, HasExplicitTint, LightLevel,
   TintBlue, TintGreen, TintRed, TintSaturation, TintLuminance.
 - Added Mouse.SelectPreviousMode() and Mouse.IsModeEnabled(CursorMode)
   functions.
 - Added readonly properties to get Button's animation state: Button.Animating,
   Button.Frame, Button.Loop, Button.View.
 - Added GetFontHeight(FontType) and GetFontLineSpacing(FontType) functions.
 - DynamicSprite.CreateFromFile and SaveToFile now support path tokens and
   comply to the new file path rules (no writing files to the game's
   installation directory).
 - Added setter for System.Windowed property, letting to change it at runtime,
   switching between windowed and fullscreen modes.