@@ -32,6 +32,8 @@ Editor:
  - New application icon to comply with 3.4.0 splash screen.
  - Fixed crash when importing old games which have extended editor version
    string saved in the project files.
+ - Fixed unhandled exception occuring when user types "#under", "#idef" or "#ifndef"
+   on the last line of the script.
  - Fixed #ifver and #ifnver not working properly if version number had only one
    component (major version).
  - Few improvements to the game compilation made in hope to reduce occasional
@@ -64,7 +66,6 @@ Script API:
    switching between windowed and fullscreen modes.
  - Added System.RenderAtScreenResolution property to change sprite rendering
    mode at runtime.
- - Fixed Speech.SkipStyle getter return value for eSkipTime case.
 
 Engine:
  - Added OpenGL renderer to Windows version.
@@ -97,6 +98,7 @@ Engine:
  - Fixed ShakeScreen command was causing graphic artifacts when game is run
    with software renderer.
  - Fixed calling ChangeView during idle animation results in new view being animated.
+ - Fixed Speech.SkipStyle getter return value for eSkipTime case.
  - Fixed Speech.VoiceMode not returning correct values when speech.vox is not
    enabled/present.
  - Fixed AdjustVolumeWithScaling character's property not working with the new
@@ -546,7 +548,7 @@ Features:
 - Added config option to run pre-3.1.0 lo-res games in hi-res mode.
 
 Bug Fixes:
-- Fixed Editor crashing when user types "#define" in script.
+- Fixed Editor crashing when user types "#define" on the last line of the script.
 - Fixed error in game compilation after user moves item folders up or down in the project tree.
 - Fixed bug which could make Character.Transparency and Object.Transparency properties return
   slightly incorrect values.
